added forms to index page :)

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,22 @@
 <h1>SEWANALYST</h1>
 <ul>
     <li>
-        <form>atr</form>
+        <form>
+            ATR 1
+            <input type = "text">
+        </form>
     </li>
     <li>
-        <form>atr</form>
+        <form>
+            ATR 2
+            <input type = "text">
+        </form>
     </li>
     <li>
-        <form>atr</form>
+        <form>
+            ATR 3
+            <input type = "text">
+        </form>
     </li>
 </ul>
 
