--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" href="../statics/style.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <script src="../app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
     <title>Sewanalyst</title>
