--- a/static/style.css
+++ b/static/style.css
@@ -8,11 +8,13 @@ svg {overflow: hidden;
     padding: 0;
     z-index: 1;
     position: absolute;
-    bottom: 0;
     display: flex;
     left: 0;
+    bottom: 0;
     width: 100%;
     height: auto;}
+
+
 
 body{
     border: 2px solid #041326;
@@ -21,21 +23,38 @@ body{
     align-items: center;
 }
 
+.lead{
+    color: whitesmoke;
+}
 
-
-h1{
+.container1{
     position: absolute;
     left: 10%;
+    top: 30%;
+}
+
+h1{
+    font-size: 150px;
     color: whitesmoke;
-    font-size: 70px;
+
 
 }
 
-form{
+.container2{
     position: absolute;
     z-index: 3;
     left: 10%;
     top: 50%;
+}
+
+form{
+    padding-left: 10px;
+    padding-top: 10px;
+    width: 450px;
+    height: 50px;
+    border-radius: 50px;
+    background: whitesmoke;
+
 }
 
 
