--- a/static/style.css
+++ b/static/style.css
@@ -14,14 +14,35 @@ svg {overflow: hidden;
     width: 100%;
     height: auto;}
 
-
-
 body{
     border: 2px solid #041326;
     border-radius: 5px;
     align-content: center;
     align-items: center;
 }
+
+.helpContent {
+  position: absolute;
+  background-color: #fefefe;
+  margin: auto;
+    z-index: 3;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%;
+    height: 100%;
+  bottom: 0;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+.help-body {padding: 2px 16px;}
+
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+
 
 .lead{
     color: whitesmoke;
@@ -32,6 +53,29 @@ body{
     left: 10%;
     top: 30%;
 }
+
+.help{
+    z-index: 3;
+    position: absolute;
+    left: 35%;
+    top: 51%;
+}
+
+
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 h1{
     font-size: 150px;
@@ -54,7 +98,6 @@ form{
     height: 50px;
     border-radius: 50px;
     background: whitesmoke;
-
 }
 
 
