updated help box with content

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,22 @@
                         &times;
                     </span>
                     <div class = "helpBody">
-                        Please Input a CSV file into the submission box.
+                        <p>SewAnalyst is a data analysis software which generates reports based on data from UK-based STWs. Its primary goal is to identify discrepancies reported data and legal guidelines, generating reports that answer the following questions:</p>
+                        <ol>
+                            <li>Do water companies accurately and consistently assess PE for individual STW’s?</li>
+                            <li>Do water companies accurately calculate DWF and FFT using the prescribed EA guidance?</li>
+                            <li>Does the EA routinely and robustly Qualitatively Assure (QA) these calculations and measures by the water companies thus ensuring provision of adequate sewage treatment capacity at water company STW’s?</li>
+                        </ol>
+                        <p>Data should be in a .csv format</p>
+                        <p>Data should be composed of the following attributes:</p>
+                        <ul>
+                            <li>Solar Population Equivalence</li>
+                            <li>Reported Population Equivalence</li>
+                            <li>Per-Capita Domestic Flow</li>
+                        </ul>
+                        <p>For more information on the EA's prescribed guidance click <a href = "https://www.gov.uk/guidance/discharges-to-surface-water-and-groundwater-environmental-permits" target="_blank"> HERE</a></p>
+                         <p>For more information on formatting to CSV click <a href = "https://help.sharpspring.com/hc/en-us/articles/115001035567-Formatting-CSV-Files-for-Import" target="_blank"> HERE</a></p>
+
                     </div>
                 </div>
             </div>
