--- a/static/style.css
+++ b/static/style.css
@@ -29,14 +29,14 @@ body{
   padding: 20px;
   border: 1px solid #888;
   width: 100%;
-    height: 100%;
-  bottom: 0;
+    height: 40%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
   animation-duration: 0.4s
 }
 
-.help-body {padding: 2px 16px;}
+.help-body {padding: 2px 16px;
+            font-size: 20px}
 
 @keyframes animatetop {
   from {top: -300px; opacity: 0}
