--- a/static/style.css
+++ b/static/style.css
@@ -22,14 +22,15 @@ body{
 }
 
 .helpContent {
+    left: 10%;
   position: absolute;
   background-color: #fefefe;
   margin: auto;
     z-index: 3;
   padding: 20px;
   border: 1px solid #888;
-  width: 100%;
-    height: 40%;
+  width: 80%;
+    height: 50%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animatetop;
   animation-duration: 0.4s
