--- a/python-backend/templates/index.html
+++ b/python-backend/templates/index.html
@@ -18,8 +18,9 @@
             </p>
         </div>
         <div class = "container2">
-            <form action = "http://localhost:5000/upload" method = "POST" enctype = "multipart/form-data">
+            <form action = "/upload" method = "post" enctype = "multipart/form-data">
                 <input type="file" name="csv file"  placeholder="csv file" value="{{ request.form['csv data'] }}">
+                <button type="submit">Submit</button>
             </form>
         </div>
         <button id = "helpButton" class = "help">Help</button>
