--- a/website-frontend/client/design.css
+++ b/website-frontend/client/design.css
@@ -39,7 +39,7 @@ body {
     justify-content: center;
 }
 
-/*put it in here*/
+/*put it in here - if i add a dot it changes things? wtf?*/
 table {
     border: 1px solid;
     background-color:white;
@@ -78,7 +78,8 @@ table {
 .blocking div:last-of-type{
   background-color: transparent;
 }
-/* Maybe don't need this one? */
+
+/* Maybe don't need this one?*/
 #background-downloads {
   background: url(sewanalyst\ logo.jpg);
   background-size: cover;
@@ -90,6 +91,7 @@ table {
 
 }
 
+/*LOUISA LOOK AT THIS WHEN YOU'RE GOING THROUGH CSS: WANT ALL BUTTONS TO HAVE A LITTLE HOVER EFFECT!!! */
 
 #onlythesebuttons {
     padding: 10px 60px;
@@ -99,7 +101,7 @@ table {
     outline: none;
     cursor: pointer;
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 250;
     border-radius: 30px;
     box-shadow: 2px 2px 5px #333;
 
@@ -118,7 +120,91 @@ table {
     box-shadow: 1px 1px 1px #333;
 }
 
+#alerts {
+  width: 7.5%;
+  position:relative;
+}
 
+.flagReportFormBox {
+  display: none;
+  position:fixed;
+  top:20%;
+  max-width: 60%;
+  /*border: 3px solid #f1f1f1;*/
+  z-index: 9;
+}
+
+.reportsGrouping {
+  display: none;
+  position:fixed;
+  top:20%;
+  max-width: 75%;
+  /*border: 3px solid #f1f1f1;*/
+  z-index: 9;
+}
+
+.table2 {
+  border: 1px solid;
+  background-color:  rgb(195,204,222);
+  /*width: 50%;*/
+  color: black;
+}
+
+
+.formContainer {
+  padding:10px;
+  background-color:rgb(15,28,37);
+}
+
+.formContainer input[type="text"], .formContainer input[type="submit"]{
+  width:100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: white;
+}
+
+
+.formContainer .btn {
+  background-color: #04AA6D;
+  color: white;
+  /*padding: 16px 20px;*/
+  outline:none;
+  cursor: pointer;
+  max-width: 45%;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom:10px;
+  opacity: 0.95;
+  border-radius:30px ;
+  
+  box-shadow:2px 2px 5px #333 ;
+}
+
+.formContainer .cancel {
+  background-color: red;
+}
+
+.cancel2 {
+  background-color: rgb(15,28,37);
+  color: white;
+  /*padding: 16px 20px;*/
+  outline:none;
+  cursor: pointer;
+  max-width: 45%;
+  font-size: 15px;
+  font-weight: 600;
+  margin-bottom:10px;
+  opacity: 0.95;
+  border-radius:30px ;
+  
+  box-shadow:2px 2px 5px #333 ;
+}
+
+
+.formContainer .btn:hover, .open-button:hover {
+  opacity: 1;
+}
 
 
 /*this is all for the download's button I think - won't touch this when fixing the CSS*/
