--- a/website-frontend/client/design.css
+++ b/website-frontend/client/design.css
@@ -195,6 +195,15 @@ th{
   z-index: 9;
 }
 
+#noreason {
+  max-width:30%;
+  position: fixed;
+  top: 50%;
+  text-align:center;
+  border: none;
+  background-color: white;
+  color:rgb(15,28,37);
+}
 .table2 {
   border: 1px solid;
   background-color:  rgb(195,204,222);
