--- a/website-frontend/client/design.css
+++ b/website-frontend/client/design.css
@@ -72,6 +72,18 @@ th{
     width: 25% ;
 }
 
+#downloadButton{
+    padding: 2.5px 10px;
+    background:rgb(255, 255, 255);
+    color: rgb(15,28,37);
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 15px;
+}
+
 #reportsPage {
   background: url(Green\ grass\ near\ body\ of\ water.jpg)/* Link to the new image on Pexels: https://www.pexels.com/photo/green-grass-and-flowers-near-water-5908897/ This is the old one: url(https://i.guim.co.uk/img/media/4ab338ccf0591167154de14c474cbe3e110e4d20/476_376_2524_1514/master/2524.jpg?width=1900&quality=45&dpr=2&s=none)*/;
   background-size: cover;
