--- a/website-frontend/client/design.css
+++ b/website-frontend/client/design.css
@@ -53,14 +53,15 @@ a{
   font-weight: 700;
   }
 
+
 .homepage {
     background: url(green\ grass\ and\ flowers\ near\ water.jpg)/* Link to the new image on Pexels: https://www.pexels.com/photo/green-grass-and-flowers-near-water-5908897/ This is the old one: url(https://i.guim.co.uk/img/media/4ab338ccf0591167154de14c474cbe3e110e4d20/476_376_2524_1514/master/2524.jpg?width=1900&quality=45&dpr=2&s=none)*/;
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     height: 100vh;
     min-width: 100%;
     min-height: 100%;
-    overflow: hidden;
     margin: 0;
     display:block;
     /*This deals with what's inside the image on the page*/
@@ -72,7 +73,7 @@ a{
 #informationBox {
   background-color: rgb(15,28,37); 
   padding-top: 1%; 
-  border: 3px solid rgb(51, 74, 90);
+  /*border: 3px solid rgb(51, 74, 90);*/
   color: white; 
   margin:5px; 
   box-shadow: 2px 2px 5px #333;
