--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             {% if messages %}
                 <ul class=flashes>
                 {% for message in messages %}
-                    <li>{{ message }}<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> </li>
+                    <li>{{ message }}<a href="#"  data-dismiss="alert" aria-label="close">&times;</a> </li>
                 {% endfor %}
                 </ul>
             {% endif %}
